fix compilation issues with 1.8_112 java